2008-11-18  higepon  <higepon@users.sourceforge.jp>

        * Added : floor, ceiling, round and truncate.

        * Rewrote : denominator and numerator.

        * Added : gcd and lcm.

        * Rewrote : odd?, +, -, *, /, abs, div, mod, div0, mod0, div-and-mod div0-and-mod0.

2008-11-18  kokosabu  <kokosabu@gmail.com>

        * Added : fxzero?, fxpositive?, fxnegative?, fxodd?, fxeven?.

2008-11-17  higepon  <higepon@users.sourceforge.jp>

        * Rewrote even? for new numeric tower.

        * lib/srfi/%3A26.ss (srfi): Added srfi :26.

        * Implemented R6RS ByteVectors.

        * ArithmeticProcedures.cpp : Added magnitude.

        * Added : Fixnum.cpp

        * lib/core/bytevector.scm : Added bytevector-uint-ref, bytevector-sint-ref, bytevector-uint-set!
                                          bytevector-sint-set!, bytevector->uint-list, bytevector->sint-list
                                          uint-list->bytevector and sint-list->bytevector.

        * Added: bytevector-ieee-single-ref, bytevector-ieee-double-ref,
                 bytevector-ieee-single-set!, bytevector-ieee-double-set!,
                 bytevector-ieee-single-native-set! and bytevector-ieee-double-native-set!.

2008-11-16  higepon  <higepon@users.sourceforge.jp>

        * Added: bytevector-ieee-single-native-ref and bytevector-ieee-double-native-ref.

        * Modified bytevector 64bit ref/set! procedures using new numeric tower.

        * Reading all kind of numbers works fine.

        * NumberReader.y: Implemented read8 / read16.

        * compiler.scm (pass1/asm-n-args): Fixed (- obj) quotation bug.

2008-11-16  kokosabu  <kokosabu@gmail.com>

        * Added : fx>?, fx<?, fx>=?, fx<=?.

2008-11-15  higepon  <higepon@users.sourceforge.jp>

        * fixed suffix bug of read number.

        * reading number10 works fine(Almost). But it needs more and more tests.

2008-11-15  kokosabu  <kokosabu@gmail.com>

        * FixnumProcedures.cpp, FixnumProcedures.h : Added.